--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     {% include swirls.html %}
     {% include rocket.html %}
   </div>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="assets/js/script.js" type="text/javascript" ></script>
 </body>
 </html>
